internal/generate/testdata/errors/InvalidQuery.go
package errors

const _ = `# @octoqlgen
	query MyQuery { g }
`
